# Transacciones-Nequi

./: README.md  pyproject.toml
src/configs/: schema.yaml
src/notebooks/: 00_data.ipynb  01_preprocessing.ipynb  02_validation.ipynb  03_eda.ipynb  04_results.ipynb  data.ipynb
src/pipelines/: preprocessors.py
src/utils/: helpers.py
tests/: test_business_logic.py  test_data_integrity.py  test_schema_validation.py
