[tool.poetry]
name = "venv-transacciones"
version = "0.1.0"
description = ""
authors = ["Jorge <robledo.11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
boto3 = "^1.35.95"
faker = "^33.3.0"
pandera = "^0.22.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
