[tool.poetry]
name = "venv-transacciones"
version = "0.1.0"
description = ""
authors = ["Jorge <robledo.11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pydantic = "^2.10.5"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
empiricaldist = "^0.7.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
